--- a/assets/99_Demo_1_Image$Recognition$And$Geo/index.html
+++ b/assets/99_Demo_1_Image$Recognition$And$Geo/index.html
@@ -18,6 +18,6 @@
 </div>
 
 <script src="js/irandgeo.js"></script>
-<!-- <script src="js/marker.js"></script>-->
+<script src="js/marker.js"></script>
 </body>
 </html>
